// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modular-css/path-aliases should be usable as a modular-css resolver 1`] = `
Object {
  "packages/aliases/test/specimens/one/sub/sub.css": Object {
    "sub": "sub",
  },
  "packages/aliases/test/specimens/two/two.css": Object {
    "two": "two",
  },
  "packages/paths/test/specimens/one/start.css": Object {
    "rule": "two rule",
    "sub": "\\"sub\\"",
  },
}
`;

exports[`@modular-css/path-aliases should fall through to the default resolver 1`] = `
Object {
  "packages/aliases/test/specimens/two/two.css": Object {
    "two": "two",
  },
  "packages/paths/test/specimens/one/start.css": Object {
    "rule": "two rule",
    "sub": "\\"sub\\"",
  },
  "packages/paths/test/specimens/one/sub/sub.css": Object {
    "sub": "sub",
  },
}
`;
